--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_headers.c>
-        Header set X-Robots-Tag "noindex, nofollow"
+        Header set X-Robots-Tag "index, follow"
     </IfModule>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
