--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.5.2",
         "tailwindcss": "^3.4.17",
+        "terser": "^5.39.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
